--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=dewice-widch, inital-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic"rel="stylesheet">
 </head>
 <body>
 Demo project
